--- a/CICD_Project/test-output/index.html
+++ b/CICD_Project/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\ssrivastav\CICD_Demo\CICD_Project\testng.xml</span>
+                    <span>C:\Users\ssrivastav\git\CICDRepository\CICD_Project\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -154,7 +154,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ssrivastav\CICD_Demo\CICD_Project\testng.xml</span>
+            <span class="header-content">C:\Users\ssrivastav\git\CICDRepository\CICD_Project\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -208,11 +208,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Launch')
 data.setCell(0, 2, 'CICD_Package.CICD_Story1')
-data.setCell(0, 3, 5464);
+data.setCell(0, 3, 5686);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'f')
 data.setCell(1, 2, 'CICD_Package.CICD_Story2')
-data.setCell(1, 3, 1);
+data.setCell(1, 3, 4);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -253,7 +253,7 @@ return data;
               <div class="chronological-class-name">CICD_Package.CICD_Story2</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">f</span>
-                <span class="method-start">5466 ms</span>
+                <span class="method-start">5688 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
